# ZFetch

./: Cargo.toml  LICENSE  README.md  config.json
src/: ascii.rs  config.rs  main.rs  system.rs  ui.rs
